--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <application
         android:largeHeap="true"
         android:allowBackup="true"
+        android:name="com.example.telphone.CrashApp"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
